--- a/index_testi.html
+++ b/index_testi.html
@@ -11,7 +11,7 @@
     <iframe src="https://matkamonitori.digitransit.fi/view?cont=2G-cnoFbk8igyIg3QbyBYw==" width="1080px" height="960px" frameborder="0"></iframe>
 
     <!-- Lower Section iframe -->
-    <iframe src="https://static.wixstatic.com/media/15200c_90df07318bae4b61bfae4f71778657c4~mv2.gif" width="1080" height="960" frameborder="0"></iframe>
+    <iframe src="https://slaveriot.github.io/gif-hsl.gif" width="1080" height="960" frameborder="0"></iframe>
 
 </body>
 </html>
