--- a/index_testi.html
+++ b/index_testi.html
@@ -6,12 +6,9 @@
     <title>HTML Page with Iframes</title>
 </head>
 <body>
-
-    <!-- Upper Section iframe -->
-    <iframe src="https://matkamonitori.digitransit.fi/view?cont=2G-cnoFbk8igyIg3QbyBYw==" width="1080px" height="960px" frameborder="0"></iframe>
-
+  
     <!-- Lower Section iframe -->
-    <iframe src="https://slaveriot.github.io/gif-hsl.gif" width="1080" height="960" frameborder="0"></iframe>
+    <iframe src="HSL_pride_9-16.gif" width="1080" height="1920" frameborder="0"></iframe>
 
 </body>
 </html>
