--- a/index_testi.html
+++ b/index_testi.html
@@ -8,7 +8,7 @@
 <body>
   
     <!-- Lower Section iframe -->
-    <iframe src="slaveriot.github.io/index_testi.html" width="1080" height="1920" frameborder="0"></iframe>
+    <iframe src="https://github.com/Slaveriot/slaveriot.github.io/blob/main/HSL_pride_9-16.gif" width="1080" height="1920" frameborder="0"></iframe>
 
 </body>
 </html>
