--- a/index_testi.html
+++ b/index_testi.html
@@ -8,7 +8,7 @@
 <body>
   
     <!-- Lower Section iframe -->
-    <img src="slaveriot.github.io/elielsuljettu.jpeg" width="1080" height="1920" alt="Italian Trulli">
+    <img src="https://slaveriot.github.io/ELIELSULJETTU.jpeg" width="1080" height="1920" alt="Italian Trulli">
 
 </body>
 </html>
