--- a/index_testi.html
+++ b/index_testi.html
@@ -8,7 +8,7 @@
 <body>
 
     <!-- Upper Section iframe -->
-    <iframe src="https://omatnaytot.hsl.fi/view?cont=T1tvsnYxBgIFdW2domnfGA==" width="1080px" height="960px" frameborder="0"></iframe>
+    <iframe src="https://hsl.trapeze.fi/traveller/web?command=fullscreen&id=Joona&title=&cols=1" width="1080px" height="960px" frameborder="0"></iframe>
 
     <!-- Lower Section iframe -->
     <iframe src="https://slaveriot.github.io/gif-hsl.gif" width="1080" height="960" frameborder="0"></iframe>
