--- a/index_testi.html
+++ b/index_testi.html
@@ -11,7 +11,7 @@
     <iframe src="https://hsl.trapeze.fi/traveller/web?command=fullscreen&id=Joona&title=&cols=1" width="1080px" height="960px" frameborder="0"></iframe>
 
     <!-- Lower Section iframe -->
-    <iframe src="https://slaveriot.github.io/Metrokatko_rt_1080x960_gif.gif" width="1080" height="960" frameborder="0"></iframe>
+    <iframe src="https://slaveriot.github.io/Metrokatko_rt_1080x960px_20s%201.gif" width="1080" height="960" frameborder="0"></iframe>
 
 </body>
 </html>
