--- a/index_kapa.html
+++ b/index_kapa.html
@@ -37,13 +37,13 @@
     </style>
 </head>
 <body>
-    <div id="header">Linjan 13 liikenne alkaa 12.8 Kalasataman ja Pasilan välille <br> Lue lisää: hsl.fi/ratikka13</div>
+    <div id="header">Metroasema aukee taas 2.9.2024 <br> Lue lisää: hsl.fi/metro24</div>
     <div id="countdown"></div>
     <img id="logo" src="HSL_logo.png" alt="HSL Logo" width="400">
 
     <script>
         function updateCountdown() {
-            const targetDate = new Date("August 14, 2024 05:10:00").getTime();
+            const targetDate = new Date("September 2, 2024 05:10:00").getTime();
             const now = new Date().getTime();
             const timeDifference = targetDate - now;
 
