--- a/index_kapa.html
+++ b/index_kapa.html
@@ -57,7 +57,7 @@
 
             if (timeDifference < 0) {
                 clearInterval(countdownInterval);
-                document.getElementById("countdown").innerHTML = "Liikenne alkanut!";
+                document.getElementById("countdown").innerHTML = "Asema auennut!";
             }
         }
 
