--- a/index_kapa.html
+++ b/index_kapa.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <div id="header">Metroasema aukee taas 2.9.2024 <br> Lue lisää: hsl.fi/metro24</div>
+    <div id="header">Metroasema aukeaa taas 2.9.2024 <br> Lue lisää: hsl.fi/metro24</div>
     <div id="countdown"></div>
     <img id="logo" src="HSL_logo.png" alt="HSL Logo" width="400">
 
