--- a/index_testi.html
+++ b/index_testi.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kapa-laskuri</title>
+    <title>Index testi</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
         body {
-            font-family: Verdana;
+            font-family: Montserrat;
             display: flex;
-            justify-content: left;
+            justify-content: center;
             align-items: left;
-            height: 100vh;
+            height: 200vh;
             margin: 0;
-            background-color: #0058a2;
+            background-color: #E43B12;
             flex-direction: column;
             position: relative;
         }
         #header {
-            font-family: 'Gotham', sans-serif;
-            font-size: 6em;
+            font-family: Montserrat';
+            font-size: 200px;
+            font-weight: bold;
             color: white;
-            background-color: #0058a2;
+            background-color: #E43B12;
             padding: 20px;
             width: 100%;
-            text-align: left;
+            text-align: center;
         }
         #countdown {
-            font-size: 7em;
+            font-size: 80px;
             color: white;
-            padding: 20px;
+            padding: 80px;
+	    text-align: center;
         }
-        #logo {
-            position: absolute;
-            bottom: 40px;
-            right: 40px;
-        }
-    </style>
+      </style>
 </head>
 <body>
-    <div id="header">Metroasema aukeaa taas 2.9.2024 <br> Lue lisää: hsl.fi/metro24</div>
+    <div id="header"><h1>Tervetuloa takaisin! <BR> Rautatientorin asema aukeaa...</h1></div>
     <div id="countdown"></div>
-    <img id="logo" src="HSL_logo.png" alt="HSL Logo" width="400">
-
+  
     <script>
         function updateCountdown() {
             const targetDate = new Date("September 2, 2024 05:10:00").getTime();
