--- a/index_testi.html
+++ b/index_testi.html
@@ -9,7 +9,7 @@
             display: flex;
             justify-content: center;
             align-items: left;
-            height: 20vh;
+            height: 50px;
             margin: 0;
             background-color: #E43B12;
             flex-direction: column;
