--- a/index_testi.html
+++ b/index_testi.html
@@ -8,6 +8,7 @@
             font-family: Montserrat;
             display: flex;
             justify-content: center;
+	    vertical-align: middle;
             align-items: left;
             height: 200px;
             margin: 0;
