--- a/index_testi.html
+++ b/index_testi.html
@@ -3,19 +3,17 @@
 <head>
     <title>Index testi</title>
     <style>
-         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap');
+         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900');
         body {
             font-family: Montserrat;
-            justify-content: center;
 	    align-items: center;
-            height: 800px;
-            margin: 10;
+            height: 30%;
+            margin: 10px;
             background-color: #E43B12;
-            flex-direction: column;
            }
         #header {
             font-family: Montserrat';
-            font-size: 100px;
+            font-size: 400px;
             font-weight: bold;
             color: white;
             background-color: #E43B12;
@@ -24,7 +22,7 @@
             text-align: center;
         }
         #countdown {
-            font-size: 80px;
+            font-size: 100px;
             color: white;
             padding: 30px;
 	    text-align: center;
