--- a/index_testi.html
+++ b/index_testi.html
@@ -13,7 +13,6 @@
            }
         #header {
             font-family: Montserrat';
-            font-size: 400px;
             font-weight: bold;
             color: white;
             background-color: #E43B12;
@@ -22,7 +21,7 @@
             text-align: center;
         }
         #countdown {
-            font-size: 140px;
+            font-size: 90px;
             color: white;
             padding: 30px;
 	    text-align: center;
@@ -30,7 +29,7 @@
       </style>
 </head>
 <body>
-    <div id="header"><h1>Tervetuloa takaisin! <BR> Rautatientorin asema aukeaa...</h1></div>
+    <div id="header"><font size="200px">Tervetuloa takaisin! <BR> Rautatientorin asema <BR> aukeaa...</font></div>
     <div id="countdown"></div>
   
     <script>
