--- a/index_testi.html
+++ b/index_testi.html
@@ -3,11 +3,11 @@
 <head>
     <title>Index testi</title>
     <style>
-         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900');
+         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800;900');
         body {
             font-family: Montserrat;
 	    align-items: center;
-            height: 30%;
+            height: 500px;
             margin: 10px;
             background-color: #E43B12;
            }
@@ -21,7 +21,7 @@
             text-align: center;
         }
         #countdown {
-            font-size: 90px;
+            font-size: 100px;
             color: white;
             padding: 30px;
 	    text-align: center;
@@ -29,7 +29,7 @@
       </style>
 </head>
 <body>
-    <div id="header"><font size="200px">Tervetuloa takaisin! <BR> Rautatientorin asema <BR> aukeaa...</font></div>
+    <div id="header"><font size="300px"><H1>Tervetuloa takaisin! <BR> Rautatientorin <BR> asema <BR> aukeaa...</H1></font></div>
     <div id="countdown"></div>
   
     <script>
