--- a/index_testi.html
+++ b/index_testi.html
@@ -29,10 +29,9 @@
       </style>
 </head>
 <body>
-    <div id="header"><font size="300px"><H1>Tervetuloa takaisin! <BR> Rautatientorin <BR> asema <BR> aukeaa...</H1></font></div>
+    <div id="header"><font size="300px"><H1>Tervetuloa <BR> takaisin! <BR><BR> Rautatientorin <BR> asema <BR> aukeaa...</H1></font></div>
     <div id="countdown"></div>
-  
-    <script>
+     <script>
         function updateCountdown() {
             const targetDate = new Date("September 2, 2024 05:18:00").getTime();
             const now = new Date().getTime();
