index_testi.html

--- a/index_testi.html
+++ b/index_testi.html
@@ -33,7 +33,7 @@
   <div class="container">
     <div class="left-section">
       <div class="pink-box">bussit jopa 3min välein</div>
-      <iframe src="https://omatnaytot.hsl.fi/view?cont=IF-Z1d-7tBFfHZY6EV91dA==" width="960px" height="1080px" frameborder="0" scrolling="no"></iframe>
+      <iframe src="https://hsl.trapeze.fi/traveller/web?command=fullscreen&id=Joona&title=&cols=1&extracolumn=platform" width="960px" height="1080px" frameborder="0" scrolling="no"></iframe>
     </div>
 
     <!-- right Section iframe -->
