--- a/index_testi.html
+++ b/index_testi.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- right Section iframe -->
-    <iframe src="https://omatnaytot.hsl.fi/view?cont=uh6LCGb3WLvztXN-N2sqJA==" width="960px" height="1080px" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://hsl.trapeze.fi/traveller/web?command=fullscreen&id=Joona2&title=&cols=1&extracolumn=platform" width="960px" height="1080px" frameborder="0" scrolling="no"></iframe>
   </div>
 
 </body>
