index_testi.html

--- a/index_testi.html
+++ b/index_testi.html
@@ -32,7 +32,8 @@
 
   <div class="container">
     <div class="left-section">
-      <div class="pink-box">bussit jopa 3min välein</div>
+      <div class="pink-box" style="color: white; font-family: 'Proxima Nova', 'Helvetica Neue', Arial, sans-serif; font-size: 48px;">
+  Bussit Vuosaareen ja Rastilaan jopa 2min välein </div>
       <iframe src="https://hsl.trapeze.fi/traveller/web?command=fullscreen&id=Joona&title=&cols=1&extracolumn=platform" width="960px" height="1080px" frameborder="0" scrolling="no"></iframe>
     </div>
 
