--- a/index_testi.html
+++ b/index_testi.html
@@ -17,7 +17,7 @@
     .pink-box {
       width: 960px;
       height: 200px;
-      background-color: pink;
+      background-color: #dc0451;
       margin-bottom: 20px;
       display: flex;
       align-items: center;
