--- a/index_testi.html
+++ b/index_testi.html
@@ -10,7 +10,7 @@
   <div class="container" style="display: flex;">
     <div class="left-section" style="display: flex; flex-direction: column; align-items: flex-start; margin-right: 0px; border: 10px solid red;">
       <div class="pink-box" style="width: 960px; height: 200px; background-color: #dc0451; margin-bottom: 0px; display: flex; align-items: center; justify-content: center; font-size: 48px; color: white; font-family: 'Proxima Nova', 'Helvetica Neue', Arial, sans-serif;">
-        Bussit Vuosaareen ja Rastilaan jopa 2min välein
+        ← Bussit Vuosaareen ja Rastilaan jopa 2min välein
       </div>
       <iframe src="https://hsl.trapeze.fi/traveller/web?command=fullscreen&id=Joona&title=&cols=1&extracolumn=platform" width="950px" height="880px" frameborder="0" scrolling="no"></iframe>
     </div>
