--- a/index_testi.html
+++ b/index_testi.html
@@ -3,20 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HTML Page with Iframes</title>
+  <title>HSL Info</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background-color: white;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+    }
+
+    .banner-image {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    iframe {
+      flex-grow: 1;
+      width: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
 
-  <div class="container" style="display: flex;">
-    <div class="left-section" style="display: flex; flex-direction: column; align-items: flex-start; margin-right: 0px; border: 10px solid red;">
-      <div class="pink-box" style="width: 960px; height: 200px; background-color: #dc0451; margin-bottom: 0px; display: flex; align-items: center; justify-content: center; font-size: 48px; color: white; font-family: 'Proxima Nova', 'Helvetica Neue', Arial, sans-serif;">
-        ← Bussit Vuosaareen ja Rastilaan jopa 2min välein
-      </div>
-      <iframe src="https://hsl.trapeze.fi/traveller/web?command=fullscreen&id=Joona&title=&cols=1&extracolumn=platform" width="950px" height="880px" frameborder="0" scrolling="no"></iframe>
-    </div>
-
-    <!-- right Section iframe -->
-    <iframe src="https://hsl.trapeze.fi/traveller/web?command=fullscreen&id=Joona2&title=&cols=1&extracolumn=platform" width="950px" height="1080px" frameborder="0" scrolling="no"></iframe>
+  <div class="container">
+    <img class="banner-image" src="https://slaveriot.github.io/HSL_pride_9-16.gif" alt="HSL Pride" />
   </div>
 
 </body>
