--- a/index_testi.html
+++ b/index_testi.html
@@ -8,8 +8,8 @@
     html, body {
       margin: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
+      width: 1080px;
+      height: 1920px;
       overflow: hidden;
       background-color: white;
     }
